<resources>
    <string name="app_name">DoctorCare</string>
    <string name="description_logo">Tìm kiếm bác sĩ dễ dàng</string>
    <string name="welcome">Xin chào</string>
    <string name="email">email</string>
    <string name="password">Mật khẩu</string>
    <string name="Login">Đăng nhập</string>
    <string name="Forgetpassword">Quên mật khẩu ?</string>
    <string name="createaccount">Tạo tài khoản mới?</string>
    <string name="introduce1">Khỏe mạnh </string>
    <string name="introduce2">Và tìm kiếm người tư vấn</string>
    <string name="introduce3">Chăm sóc sức khỏe, cải thiện cuộc sống</string>
    <string name="introduce4">Sẵn sàng giúp bạn dù bạn là ai</string>
    <string name="getstarted">Bắt đầu nào >></string>
    <string name="signup">Đăng kí</string>
    <string name="hello">Xin chào</string>
    <string name="confirmpassword">Xác nhận mật khẩu</string>
    <string name="Continue">Tiếp tục</string>
    <string name="backtologin">Đăng nhập</string>
    <string name="insurance">Bảo hiểm</string>
    <string name="description_insurance">Vui lòng điền đủ thông tin bảo hiểm</string>
    <string name="name">Tên</string>
    <string name="Insurancecode">Mã số bảo hiểm</string>
    <string name="Insurancename">Tên bảo hiểm</string>
    <string name="createat">Tạo lúc</string>
    <string name="creatDate">Ngày tạo</string>
    <string name="expiredDate">Ngày hết hạn</string>
    <string name="insurancenameisnotempty">Tên bảo hiểm bị trống</string>
    <string name="insurancecodeisnotempty">Mã số bảo hiểm bị trống</string>
    <string name="createdatisnotempty">Tạo lúc bị trống</string>
    <string name="createddateisnotempty">Ngày tạo bị trống</string>
    <string name="expireddateisontempty">Ngày hết hạn bị trống</string>
    <string name="pleasefillfull">Vui lòng điền đủ thông tin</string>
    <string name="minpassword">Mật khẩu chứa ít nhất 6 kí tự</string>
    <string name="wrongconfirmpassword">Mật khẩu không khớp</string>
    <string name="personalinfomation">Thông tin cá nhân</string>
    <string name="description_information">Vui lòng điền đủ thông tin cá nhân</string>
    <string name="first_name">Tên</string>
    <string name="last_name">Họ</string>
    <string name="phone">Số điện thoại</string>
    <string name="birthday">Sinh nhật</string>
    <string name="career">Công việc</string>
    <string name="gender">Giới tính</string>
    <string name="Male">Nam</string>
    <string name="Female">Nữ</string>
    <string name="first_nameisnotempty">Tên bị trống</string>
    <string name="last_nameisnotempty">Họ bị trống</string>
    <string name="phoneisnotempty">Số điện thoại bị trống</string>
    <string name="birthdayisnotempty">Ngày sinh bị trống</string>
    <string name="careerisnotempty">Công việc bị trống</string>
    <string name="Home">Trang chủ</string>
    <string name="Search">Tìm kiếm</string>
    <string name="Chat">Chat</string>
    <string name="Setting">Cài đặt</string>
    <string name="Profile">Hồ sơ</string>
    <string name="save">Lưu</string>
    <string name="about_your_insurance">Bảo hiểm</string>
    <string name="please_wait">Vui lòng đợi trong giây lát...</string>
    <string name="searchdoctor">Tìm kiếm bác sĩ...</string>
    <string name="truonghopkhancap"><b>Trường hợp khẩn cấp</b> \n 0985606006  </string>
    <string name="lichlamviec"><b>Lịch làm việc</b> \nCác bác sĩ luôn sẵn sàng hằng ngày \nVui lòng xem lịch để hẹn khám</string>
    <string name="xem_lich"><u>xem lịch</u></string>
    <string name="giomocua">Giờ mở cửa</string>
    <string name="enter_message">Enter message</string>
    <string name="send">SEND</string>
</resources>