<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/Home" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_person_search_24"
        android:title="@string/Search" />
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/Chat" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="@string/Profile" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/Setting" />
</menu>