<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="50sp"
        android:gravity="center"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:typeface="serif"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />
    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:elevation="20dp"
        android:typeface="serif"
        android:background="@drawable/signup_edittext"
        android:textColor="@color/black"
        android:hint="@string/email"/>
    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:elevation="20dp"
        android:maxLength="15"
        android:inputType="textPassword"
        android:shadowColor="@color/purple_200"
        android:typeface="serif"
        android:background="@drawable/signup_edittext"
        android:textColor="@color/black"
        android:hint="@string/password"/>
    <EditText
        android:id="@+id/edt_confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:elevation="20dp"
        android:maxLength="15"
        android:inputType="textPassword"
        android:shadowColor="@color/purple_200"
        android:typeface="serif"
        android:background="@drawable/signup_edittext"
        android:textColor="@color/black"
        android:hint="@string/confirmpassword"/>
    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="60dp"
        android:typeface="serif"
        android:gravity="center"
        android:shadowColor="@color/purple_200"
        android:text="@string/Continue"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/signup_button"/>
    <Button
        android:id="@+id/btn_backtologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/backtologin"
        android:textSize="15sp"
        android:textColor="@color/blue"
        style="@style/Widget.MaterialComponents.Button.TextButton" />
</LinearLayout>