<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="50dp"
            android:paddingTop="50dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personalinfomation"
                android:textSize="50sp"
                android:gravity="center"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:typeface="serif" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_information"
                android:gravity="center"
                android:textColor="@color/blue" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/first_name"
                android:textColor="@color/purple_200"
                android:textSize="20dp" />
            <EditText
                android:id="@+id/edt_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/signup_edittext"
                android:layout_margin="10dp"
                android:textSize="20dp"
                android:elevation="10dp"
                android:padding="20dp"
                android:textColorHint="@color/light_black" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/last_name"
                android:textColor="@color/purple_200"
                android:textSize="20dp" />
            <EditText
                android:id="@+id/edt_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/signup_edittext"
                android:layout_margin="10dp"
                android:padding="20dp"
                android:textColorHint="@color/light_black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/phone"
                android:textColor="@color/purple_200"
                android:textSize="20dp" />
            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/signup_edittext"
                android:layout_margin="10dp"
                android:textSize="20dp"
                android:padding="20dp"
                android:textColorHint="@color/light_black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/birthday"
                android:textColor="@color/purple_200"
                android:textSize="20dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/signup_edittext"
                android:layout_margin="10dp"

                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_birthday"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/light_black" />
                <ImageButton
                    android:id="@+id/btn_birthday"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:backgroundTint="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_baseline_calendar_today_24"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/career"
                android:textColor="@color/purple_200"
                android:textSize="20dp" />
            <EditText
                android:id="@+id/edt_career"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/signup_edittext"
                android:layout_margin="10dp"
                android:padding="20dp"
                android:textColorHint="@color/light_black"/>
            <TextView
                android:id="@+id/tv_expireddate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="@color/light_black" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/gender"
                android:textColor="@color/purple_200"
                android:textSize="20dp" />
            <RadioGroup
                android:id="@+id/radio_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple_200"
                    android:textSize="20dp"
                    android:checked="true"
                    android:buttonTint="@color/blue"
                    android:text="@string/Male"/>
                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/blue"
                    android:textColor="@color/purple_200"
                    android:textSize="20dp"
                    android:text="@string/Female"/>
            </RadioGroup>
            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:background="@drawable/signup_button"
                android:textColor="@color/white"
                android:layout_margin="30dp"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>