<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:paddingTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_edit_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:civ_circle_background_color="@color/black"
            android:backgroundTint="@color/blue"
            app:civ_border_color="@color/blue"
            app:civ_border_width="2dp"
            android:background="@drawable/ic_baseline_person_outline_24" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/name"
            android:textColor="@color/purple_200"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/edt_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_edittext"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:elevation="10dp"
            android:padding="20dp"
            android:textColorHint="@color/light_black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/phone"
            android:textColor="@color/purple_200"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/edt_edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_edittext"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:padding="20dp"
            android:textColorHint="@color/light_black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/birthday"
            android:textColor="@color/purple_200"
            android:textSize="20dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_edittext"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_edit_birthday"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:padding="20dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:textColorHint="@color/light_black" />
            <ImageButton
                android:id="@+id/btn_edit_birthday"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_baseline_calendar_today_24"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/career"
            android:textColor="@color/purple_200"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/edt_edit_career"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_edittext"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:textColorHint="@color/light_black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/gender"
            android:textColor="@color/purple_200"
            android:textSize="20dp" />
        <RadioGroup
            android:id="@+id/radio_edit_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio_edit_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_200"
                android:textSize="20dp"
                android:checked="true"
                android:buttonTint="@color/blue"
                android:text="@string/Male"/>
            <RadioButton
                android:id="@+id/radio_edit_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:textColor="@color/purple_200"
                android:textSize="20dp"
                android:text="@string/Female"/>
        </RadioGroup>
        <Button
            android:id="@+id/btn_edit_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@drawable/signup_button"
            android:textColor="@color/white"
            android:layout_margin="30dp" />
    </LinearLayout>
</ScrollView>