<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="50dp"
            android:paddingBottom="50dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insurance"
                android:textSize="50sp"
                android:gravity="center"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:typeface="serif" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_insurance"
                android:gravity="center"
                android:textColor="@color/blue"
                android:layout_marginBottom="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Insurancename"
                android:textColor="@color/purple_200"
                android:textSize="20dp" />
            <EditText
                android:id="@+id/edt_insurancename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:background="@drawable/signup_edittext"
                android:layout_margin="10dp"
                android:padding="20dp"
                android:textColorHint="@color/light_black" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Insurancecode"
                android:textColor="@color/purple_200"
                android:textSize="20dp" />
            <EditText
                android:id="@+id/edt_insurancecode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/signup_edittext"
                android:layout_margin="10dp"
                android:textSize="20dp"
                android:padding="20dp"
                android:textColorHint="@color/light_black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/creatDate"
                android:textColor="@color/purple_200"
                android:textSize="20dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/signup_edittext"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_createddate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_black"
                    android:textSize="20dp" />
                <ImageButton
                    android:id="@+id/btn_createddate"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="@color/white"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_calendar_today_24"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/expiredDate"
                android:textColor="@color/purple_200"
                android:textSize="20dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/signup_edittext"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_expireddate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:textColorHint="@color/light_black" />
                <ImageButton
                    android:id="@+id/btn_expireddate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_baseline_calendar_today_24" />
            </LinearLayout>
            <Button
                android:id="@+id/btn_continueto3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Continue"
                android:background="@drawable/signup_button"
                android:textColor="@color/white"
                android:layout_margin="30dp"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>